Fix: Small layout issue

--- a/src/main/webapp/app/programming/manage/code-editor/file-browser/code-editor-file-browser.scss
+++ b/src/main/webapp/app/programming/manage/code-editor/file-browser/code-editor-file-browser.scss
@@ -62,6 +62,7 @@ File browser tree
                 gap: 0.35rem;
                 min-width: 0;
                 flex: 0 1 auto;
+                margin-right: 0.35rem;
             }
 
             .list-group-item:hover {
